@@ -28,5 +28,36 @@
 ;; TODO Update to 30.1 as soon as the Emacs emacs-30 branch version bumped
 (compat-version "30.0.50")
 
+;;;; Defined in subr.el
+
+(compat-defun copy-tree (tree &optional vectors-and-records) ;; <compat-tests:copy-tree>
+  "Handle copying records when optional arg is non-nil."
+  :extended t
+  (declare (side-effect-free error-free))
+  ;; `recordp' was not added until Emacs 26
+  (let ((compat--recordp (if (fboundp #'recordp)
+                             #'recordp
+                           #'always)))
+    (if (consp tree)
+        (let (result)
+	  (while (consp tree)
+	    (let ((newcar (car tree)))
+	      (if (or (consp (car tree))
+                      (and vectors-and-records
+                           (or (vectorp (car tree)) (funcall compat--recordp (car tree)))))
+		  (setq newcar (compat--copy-tree (car tree) vectors-and-records)))
+	      (push newcar result))
+	    (setq tree (cdr tree)))
+	  (nconc (nreverse result)
+                 (if (and vectors-and-records (or (vectorp tree) (funcall compat--recordp tree)))
+                     (compat--copy-tree tree vectors-and-records)
+                   tree)))
+      (if (and vectors-and-records (or (vectorp tree) (funcall compat--recordp tree)))
+	  (let ((i (length (setq tree (copy-sequence tree)))))
+	    (while (>= (setq i (1- i)) 0)
+	      (aset tree i (compat--copy-tree (aref tree i) vectors-and-records)))
+	    tree)
+        tree))))
+
 (provide 'compat-30)
 ;;; compat-30.el ends here
