@@ -7,6 +7,8 @@
 - compat-28: Improve =make-separator-line= visuals on graphic displays.
 - compat-28: Add =native-comp-available-p=, which always returns nil.
 - compat-29: Add variable =lisp-directory=.
+- compat-30: Replace ~copy-tree~ with version from Emacs 30, support
+  copying records with non-nil optional second argument.
 
 * Release of "Compat" Version 29.1.4.1
 
